--- a/manifest.json
+++ b/manifest.json
@@ -10,17 +10,20 @@
 		"libs/modules/promise/promise.js"
 	],
 	"game": [
-		"bin-debug/本地/ConfigFinal.js",
+		"bin-debug/本地/ConfigInfo.js",
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Platform.js",
+		"bin-debug/弹窗/AlertExtension.js",
 		"bin-debug/数据模型/DataInstance.js",
 		"bin-debug/数据模型/Match.js",
 		"bin-debug/数据模型/Team.js",
 		"bin-debug/本地/Config.js",
+		"bin-debug/本地/ConfigFinal.js",
 		"bin-debug/Main.js",
-		"bin-debug/本地/ConfigInfo.js",
 		"bin-debug/游戏场景/GameScene.js",
+		"bin-debug/游戏场景/ProcessNode.js",
 		"bin-debug/自定义事件/TeamEvent.js",
+		"bin-debug/自定义事件/ProcessEvent.js",
 		"bin-debug/菜单场景/MenuScene.js",
 		"bin-debug/菜单场景/章节/ChapterNode.js",
 		"bin-debug/菜单场景/章节/ChaptersNode.js",
