--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 	],
 	"game": [
 		"bin-debug/游戏场景/角色/Player.js",
-		"bin-debug/游戏场景/GameScene.js",
+		"bin-debug/游戏场景/ProcessNode.js",
 		"bin-debug/Platform.js",
 		"bin-debug/弹窗/AlertExtension.js",
 		"bin-debug/数据模型/DataInstance.js",
@@ -19,14 +19,17 @@
 		"bin-debug/数据模型/Team.js",
 		"bin-debug/本地/Config.js",
 		"bin-debug/本地/ConfigConstant.js",
+		"bin-debug/本地/ConfigDragonBone.js",
 		"bin-debug/本地/ConfigFinal.js",
 		"bin-debug/本地/ConfigInfo.js",
 		"bin-debug/本地/ConfigVariable.js",
+		"bin-debug/游戏场景/GameScene.js",
 		"bin-debug/Main.js",
-		"bin-debug/游戏场景/ProcessNode.js",
+		"bin-debug/游戏场景/点击区域/Area.js",
 		"bin-debug/LoadingUI.js",
 		"bin-debug/游戏场景/角色/Keeper.js",
 		"bin-debug/游戏场景/角色/Shooter.js",
+		"bin-debug/网络模块/Session.js",
 		"bin-debug/自定义事件/MyEvent.js",
 		"bin-debug/自定义事件/ButtonEvent.js",
 		"bin-debug/自定义事件/ProcessEvent.js",
